<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/partido_de_truco"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="7dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/nos"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <Button
                    android:id="@+id/btn_resNos"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:background="@color/colorPrimary"
                    android:text="@string/resta"
                    android:textColor="@color/colorFuente" />


                <TextView
                    android:id="@+id/tv_mNos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="4dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="45sp" />

                <Button
                    android:id="@+id/btn_sumNos"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorPrimary"
                    android:text="@string/sube"
                    android:textColor="@color/colorFuente" />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_envNos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorEnvido"
                android:text="Envido"
                android:textColor="@color/colorFuente" />

            <Button
                android:id="@+id/btn_realNos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/colorRealEnvido"
                android:text="Real Envido"
                android:textColor="@color/colorFuente" />

            <Button
                android:id="@+id/btn_falNos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/colorFaltaEnvido"
                android:text="Falta Envido"
                android:textColor="@color/colorFuente" />

            <Button
                android:id="@+id/btn_trNos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/colorTruco"
                android:text="Truco"
                android:textColor="@color/colorFuente" />

            <Button
                android:id="@+id/btn_retrNos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/colorReTruco"
                android:text="Re Truco"
                android:textColor="@color/colorFuente" />

            <Button
                android:id="@+id/btn_valeNos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimary"
                android:text="Vale Cuatro"
                android:textColor="@color/colorFuente" />

            <Button
                android:id="@+id/btn_puntoNos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/colorPunto"
                android:text="1 Punto"
                android:textColor="@color/colorFuente" />

        </LinearLayout>

        <View
            android:layout_width="3dp"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/ellos"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <Button
                    android:id="@+id/btn_resEll"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:background="@color/colorPrimary"
                    android:text="@string/resta"
                    android:textColor="@color/colorFuente" />


                <TextView
                    android:id="@+id/tv_mEll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="4dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="45sp" />

                <Button
                    android:id="@+id/btn_sumEll"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorPrimary"
                    android:text="@string/sube"
                    android:textColor="@color/colorFuente" />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_envEll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorEnvido"
                android:text="@string/envido"
                android:textColor="@color/colorFuente" />

            <Button
                android:id="@+id/btn_realEll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/colorRealEnvido"
                android:text="@string/real_envido"
                android:textColor="@color/colorFuente" />

            <Button
                android:id="@+id/btn_falEll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/colorFaltaEnvido"
                android:text="@string/falta_envido"
                android:textColor="@color/colorFuente" />

            <Button
                android:id="@+id/btn_trEll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/colorTruco"
                android:text="@string/truco"
                android:textColor="@color/colorFuente" />

            <Button
                android:id="@+id/btn_retrEll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/colorReTruco"
                android:text="@string/re_truco"
                android:textColor="@color/colorFuente" />

            <Button
                android:id="@+id/btn_valeEll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimary"
                android:text="@string/vale_cuatro"
                android:textColor="@color/colorFuente" />

            <Button
                android:id="@+id/btn_puntoEll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/colorPunto"
                android:text="@string/_1_punto"
                android:textColor="@color/colorFuente" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@color/colorPrimary"
        android:text="Reset"
        android:textColor="@color/colorFuente" />
</LinearLayout>
